--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,9 +1,14 @@
-<% provide(:title, 'All posts') %>
-<h1>All posts</h1>
+<div class="container-fluid">
+
+  <% provide(:title, 'All posts') %>
+
+  <h1>My posts</h1>
 
 
-<ul class="posts">
-  <%= render @posts %>
-</ul>
+  <ul class="posts">
+    <%= render @posts %>
+  </ul>
 
-<%= will_paginate @posts %>
+  <%= will_paginate @posts %>
+
+</div>
