Homeページのstatsの「stylings」から、indexページに飛ぶようにした。

--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -25,7 +25,7 @@
     keeps
   </a>
   <% if logged_in? && current_user.stylist? %>
-    <a href="<%= followers_user_path(@user) %>">
+    <a href="<%= post_scomments_path(@user) %>">
       <strong class="stat">
         <%= @current_user.scomments.count %>
       </strong>
