--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,3 +2,25 @@
 <h1>ポストShowページ</h1>
 
 <%= @post.content %>
+
+<h2>コメント一覧</h2>
+<% @post.scomments.each do |scomment| %>
+<p>
+<%= simple_format scomment.content %>
+</p>
+<% end %>
+
+
+<li>
+<h2>コメント投稿欄:</h2>
+<%= form_for( [@post, @post.scomments.build] ) do |f| %>
+  <div class="field">
+  <%= f.label :content %><br />
+  <%= f.text_area :content %>
+  <%= f.hidden_field :user_id %>
+  </div>
+  <div class="actions">
+  <%= f.submit %>
+  </div>
+<% end %>
+</li>
