--- a/app/views/scomments/_scomment.html.erb
+++ b/app/views/scomments/_scomment.html.erb
@@ -1,7 +1,10 @@
 <li id="scomment-<%= scomment.id %>">
-  <!-- じかんがあったら、styling送ってあげた先のポストとそのユーザー名。更に、コメントした時間入れる。 -->
+
   <span class="content">
   　<%= scomment.content %>
+    <%= scomment.user_id %>
+
   </span>
+
 
 </li>
