--- a/app/views/shared/_scomment_form.html.erb
+++ b/app/views/shared/_scomment_form.html.erb
@@ -1,33 +1,16 @@
-<%= form_for(@post, html: { multipart: true }) do |f| %>
-
-  <%= render 'shared/error_messages', object: f.object %>
-
-<form>
-
-  <legend>Free message</legend>
-  <!-- メッセージ入力欄 -->
-  <div class="form-group">
-    <label for="exampleTextarea">Message</label>
-      <%= f.text_area :content, placeholder: "Good idea for you!" %>
+<%= form_for( [@post, @post.scomments.create] ) do |f| %>
+  <div class="field">
+  <%= f.label :content %><br />
+  <%= f.text_area :content %>
+  <%= f.hidden_field :user_id %>
   </div>
-
-  <!-- <legend>Hint pics?</legend> -->
-  <!-- ファイル選択 -->
-  <!-- <div class="form-group">
-    <label for="exampleInputFile">File input</label>
-    <span class="picture">
-      <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
-    </span>
-    <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input.</small>
-  </div> -->
-<legend>Ready?</legend>
-<%= f.submit "Go", class: "button1" %>
-</form>
-
+  <div class="actions">
+  <button class="button1"><%= f.submit %></button>
+  </div>
 <% end %>
 
 
-
+<!--
 <script type="text/javascript">
   $('#post_picture').bind('change', function() {
     var size_in_megabytes = this.files[0].size/1024/1024;
@@ -35,4 +18,4 @@
       alert('Maximum file size is 5MB. Please choose a smaller file.');
     }
   });
-</script>
+</script> -->
