コメント削除機能をつけた。

--- a/app/views/scomments/_scomment.html.erb
+++ b/app/views/scomments/_scomment.html.erb
@@ -3,8 +3,9 @@
   <span class="content">
   　<%= scomment.content %>
     <%= scomment.user_id %>
-
   </span>
-
+<p>
+<%= link_to 'コメント削除', [scomment.post, scomment], method: :delete, data: { confirm: '削除しますか？' } %>
+</p>
 
 </li>
