Styling Book 一覧(Postの一覧兼)に飛べるようにした。

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,12 +14,17 @@
     </aside>
     <div class="col-md-8">
       <%= render 'follow_form' if logged_in? %>
+
       <% if @user.posts.any? %>
       <h3>Posts (<%= @user.posts.count %>)</h3>
       <ol class="posts">
         <%= render @posts %>
       </ol>
       <%= will_paginate @posts %>
+      <% end %>
+
+      <% if @user.stylist? %>
+        <h2>This is My StylingBook!</h2>
       <% end %>
     </div>
   </div>
