--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,16 @@
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
+
+  <% if user.stylist? %>
+    <button type="button" class="btn btn-default">
+      <%= link_to "See My StylingBook", user %>
+    </button>
+  <% end %>
+
   <% if current_user.admin? && !current_user?(user) %>
     | <%= link_to "delete", user, method: :delete,
                                   data: { confirm: "You sure?" } %>
   <% end %>
+
 </li>
