--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -29,6 +29,6 @@
 <% else %>
   <p>You have <%= post.scomments.count %> stylings!</p>
   <button type="button" class="btn btn-default">
-    <%= link_to 'Show', post %>
+    <%= link_to 'See Details', post %>
   </button>
 <% end %>
