--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,17 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <h1>ポストShowページ</h1>
 
+      <h1>Post</h1>
       <%= @post.content %>
 
-
+      <h1>Comment below!</h1>
       <%= render @post.scomments %>
 
-      <%= render 'shared/scomment_form' %>
-
+      <% if logged_in? && current_user.stylist? %>
+        <h1>Send Styling from here!</h1>
+        <%= render 'shared/scomment_form' %>
+      <% end %>
     </div>
   </div>
 </div>
