--- a/app/views/shared/_scomment_form.html.erb
+++ b/app/views/shared/_scomment_form.html.erb
@@ -7,15 +7,24 @@
     <div class="actions">
       <button class="button1"><%= f.submit %></button>
     </div>
+
+    <div class="form-group">
+      <label for="exampleInputFile">File input</label>
+      <span class="picture">
+        <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+      </span>
+      <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input.</small>
+    </div>
+    
   <% end %>
 
 
-<!--
+
 <script type="text/javascript">
-  $('#post_picture').bind('change', function() {
+  $('#scomment_picture').bind('change', function() {
     var size_in_megabytes = this.files[0].size/1024/1024;
     if (size_in_megabytes > 5) {
       alert('Maximum file size is 5MB. Please choose a smaller file.');
     }
   });
-</script> -->
+</script>
