ランディングページの日本語作った。

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,7 +36,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
-          <h1 class="cover-heading">Make your style new.</h1>
+          <h1 class="cover-heading"><%= t 'views.static_pages.home.Make your style new!' %></h1>
           <p class="lead">Free, you can get advices from cool friends all over world.</p>
 
           <div class="wrap">
