--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -469,3 +469,11 @@ a {
       text-decoration: none;
   }
 }
+
+.scomment-index {
+  border-top: 1px solid rgba(255,255,255,.2);
+  font-size: 1.0em;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+
+}
