--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,11 @@
       <section class="stats">
         <%= render 'shared/stats' %>
       </section>
+      <section class="favorites">
+        <%= render 'shared/favorites' %>
+      </section>
     </aside>
+
     <div class="col-md-8">
       <%= render 'follow_form' if logged_in? %>
 
