お気に入りのコントローラー、お気に入り登録・削除アクション、ルーティング、お気に入り登録ボタンを作った。

--- a/app/views/scomments/_scomment.html.erb
+++ b/app/views/scomments/_scomment.html.erb
@@ -17,7 +17,7 @@
     <div id="hint"></div>
 
     <%= link_to 'Delete', [scomment.post, scomment], method: :delete, data: { confirm: 'Really delete?' } %>
-
+    <%= link_to "お気に入りに登録", add_post_scomment_path(scomment), method: :post %>
 </div>
 
 
