コメント辺り整理した。

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -349,6 +349,54 @@ span.picture {
   }
 }
 
+/* コメント */
+
+.scomments {
+  list-style: none;
+  padding: 0;
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+  .user {
+    margin-top: 5em;
+    padding-top: 0;
+  }
+  .content {
+    display: block;
+    margin-left: 60px;
+    img {
+      display: block;
+      padding: 5px 0;
+    }
+  }
+  .timestamp {
+    color: $gray-light;
+    display: block;
+    margin-left: 60px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+    margin-top: 5px;
+  }
+}
+
+aside {
+  textarea {
+    height: 100px;
+    margin-bottom: 5px;
+  }
+}
+
+span.picture {
+  margin-top: 10px;
+  input {
+    border: 0;
+  }
+}
+
+
 /*http://photoshopvip.net/91115のButton Shadowより
 ボタンbuttonはbutton1に名前変えています。*/
 
@@ -468,12 +516,4 @@ a {
     &:active {
       text-decoration: none;
   }
-}
-
-.scomment-index {
-  border-top: 1px solid rgba(255,255,255,.2);
-  font-size: 1.0em;
-  font-family: 'Roboto', sans-serif;
-  text-align: center;
-
 }
