いろんなjQueryのも表など作りたいかもしれないので、jQueryCDNも読み込んでおいた。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 <!-- ？ -->
     <%= csrf_meta_tags %>
     <%= render 'layouts/shim' %>
+<!-- jQueryの読み込み -->
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <!-- semanticUI読み込み -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
     <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
