読みやすくするために、HeaderとFooterの<div>装飾とって、Rubyのコードだけにした。

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,11 +1,6 @@
-<footer class="footer">
-  <div class="btn-group" role="group" aria-label="...">
-    <button type="button" class="btn btn-default">English</button>
-    <button type="button" class="btn btn-default">日本語</button>
-  </div>
-  <ul>
-    <li><%= link_to "About",   about_path %></li>
-    <li><%= link_to "Contact", contact_path %></li>
-    <li><a href="http://news.railstutorial.org/">News</a></li>
-  </ul>
-</footer>
+
+English
+日本語
+    <%= link_to "About",   about_path %>
+    <%= link_to "Contact", contact_path %>
+    <a href="http://news.railstutorial.org/">News</a>
