--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 <!-- ？ -->
     <%= csrf_meta_tags %>
-    <%= render 'layouts/shim' %>
+    <%= render 'shared/shim' %>
 <!-- jQueryの読み込み -->
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
@@ -25,7 +25,7 @@
 
   <body>
 
-<%= render 'layouts/header' %>
+<%= render 'shared/header' %>
 <% flash.each do |message_type, message| %>
 <div class="alert alert-<%= message_type %>"><%= message %></div>
 <% end %>
@@ -34,7 +34,7 @@
 <%= yield %>
 
 
-<%= render 'layouts/footer' %>
+<%= render 'shared/footer' %>
 <%= debug(params) if Rails.env.development? %>
 
   </body>
