viewにどのパーシャルファイルをつかっているか、どうレンダーしていってるか書き込んだ。

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,14 +1,8 @@
-<div class="container-fluid">
+＞＞posts/indexページはじまり。
+<% provide(:title, 'All posts') %>
+<h1>My posts</h1>
 
-  <% provide(:title, 'All posts') %>
-
-  <h1>My posts</h1>
-
-
-  <ul class="posts">
-    <%= render @posts %>
-  </ul>
-
-  
-
-</div>
+<ul class="posts">
+  <%= render @posts %>
+</ul>
+＜＜posts/indexページおわり。
