--- a/app/views/scomments/_scomment.html.erb
+++ b/app/views/scomments/_scomment.html.erb
@@ -1,3 +1,4 @@
+＞＞scomments/_scommentページはじまり。
 
 <div id="scomment-<%= scomment.id %>">
 
@@ -14,3 +15,5 @@
   </p>
 </div>
     <%= link_to 'Delete', [scomment.post, scomment], method: :delete, data: { confirm: 'Really delete?' } %>
+
+＜＜scomments/_scommentページおわり。
