--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,3 +1,4 @@
+Post_formページスタート＞＞
 <%= form_for(@post, html: { multipart: true }) do |f| %>
 
   <%= render 'shared/error_messages', object: f.object %>
@@ -163,7 +164,7 @@
     </div>
 
 
-  
+
 
 
   <legend>Hint pics?</legend>
@@ -186,7 +187,7 @@
 </form>
 
 <% end %>
-
+＜＜Post_formページおわり。
 
 
 <script type="text/javascript">
