--- a/app/views/shared/_scomment_form.html.erb
+++ b/app/views/shared/_scomment_form.html.erb
@@ -1,3 +1,5 @@
+＞＞shared/_scommentページはじまり。
+
   <%= form_for( [@post, @post.scomments.create] ) do |f| %>
     <div class="field">
       <%= f.label :content %><br />
@@ -15,9 +17,10 @@
       </span>
       <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input.</small>
     </div>
-    
+
   <% end %>
 
+  ＜＜shared/_scommentページおわり。
 
 
 <script type="text/javascript">
