--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,3 +1,4 @@
+Statページスタート＞＞
 <% @user ||= current_user %>
 <div class="stats">
   <a href="<%= following_user_path(@user) %>">
@@ -25,3 +26,4 @@
     keeps
   </a>
 </div>
+＜＜Statページおわり
