--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,3 +1,5 @@
+＞＞users/_userページはじまり。
+
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
@@ -14,3 +16,5 @@
   <% end %>
 
 </li>
+
+＜＜users/_userページおわり。
