--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,7 @@
+＞＞users/indexページはじまり。
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
-
-
-
 <ul class="users">
   <%= render @users %>
 </ul>
+＜＜users/indexページおわり。
