--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,3 +1,4 @@
+＞＞posts/_postページはじまり。
 <li id="post-<%= post.id %>">
   <%= link_to gravatar_for(post.user, size: 50), post.user %>
 
@@ -32,3 +33,4 @@
     <%= link_to 'See Details', post %>
   </button>
 <% end %>
+＜＜posts/_postページおわり。
