--- a/app/views/scomments/index.html.erb
+++ b/app/views/scomments/index.html.erb
@@ -1,15 +1,8 @@
-<div class="container-fluid">
-
-  <% provide(:title, 'All stylings') %>
-
-  <h1>My stylings</h1>
-
-
-  <ul class="scomments">
-    <%= render @scomments %>
-  </ul>
-
-  
-
-</div>
+＞＞scomments/indexページはじまり。
+<% provide(:title, 'All stylings') %>
+<h1>My stylings</h1>
+<ul class="scomments">
+  <%= render @scomments %>
+</ul>
+＜＜scomments/indexページおわり。
 <!-- ページネートgemが自動でとってきてくれる。_scomments.html.erbから。 -->
