--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,6 +1,8 @@
+feedページスタート＞＞
 <% if @feed_items.any? %>
   <ol class="posts">
     <%= render @feed_items %>
   </ol>
-  
+
 <% end %>
+＜＜feedページおわり
