--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,12 +1,10 @@
-<h4 class="card-title"><%= current_user.name %></h4>
+User_infoページスタート＞＞
+<%= current_user.name %>
 <%= link_to gravatar_for(current_user, size: 100), current_user %>
-<button type="button" class="btn btn-default">
-  <%= link_to "Edit profile", edit_user_path(current_user) %>
-</button>
+<%= link_to "Edit profile", edit_user_path(current_user) %>
 <% if logged_in? && current_user.stylist? %>
-  <button type="button" class="btn btn-default">
-    <%= link_to "See My StylingBook", current_user %>
-  </button>
-  <p>Sent<%= @current_user.scomments.count %> styling comments!</p>
-  <p>Now <%= @current_user.scomments.count %> stars got!</p>
+<%= link_to "See My StylingBook", current_user %>
+<p>Sent<%= @current_user.scomments.count %> styling comments!</p>
+<p>Now <%= @current_user.scomments.count %> stars got!</p>
 <% end %>
+＜＜User_infoページおわり
