--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,57 +1,29 @@
 <% if logged_in? %>
-<div class="container-fluid">
-  <div class="row">
-    <aside class="col-md-4">
-      <div class="card">
-        <div class="card-block">
-          <section class="user_info">
-            <%= render 'shared/user_info' %>
-          </section>
-        </div>
-        <section class="stats">
-          <%= render 'shared/stats' %>
-        </section>
-      </div>
-      <section class="post_form">
-        <%= render 'shared/post_form' %>
-      </section>
-    </aside>
-    <div class="col-md-6">
-      <h3>My Feed</h3>
-      <%= render 'shared/feed' %>
-    </div>
-    <div class="col-md-2">
-      <div class="card">
-        <div class="card-block">
-        <h3>Sponsored</h3>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+＞＞homeページからshared/user_infoページへ。
+<%= render 'shared/user_info' %>
+
+＞＞homeページからshared/statsページへ。
+<%= render 'shared/stats' %>
+
+＞＞homeページからshared/post_formページへ。
+<%= render 'shared/post_form' %>
+
+<h3>My Feed</h3>
+＞＞homeページからshared/feedページへ。
+<%= render 'shared/feed' %>
+
+<h3>Sponsored</h3>
+
 
 <% else %>
-<div class="intro">
-  <div class="intro-body">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <h1 class="cover-heading"><%= t 'views.static_pages.home.Make your style new!' %></h1>
-          <p class="lead">Free, you can get advices from cool friends all over world.</p>
 
-          <div class="wrap">
-            <button class="button1">
-              <%= link_to "Sign Up for free", signup_path %>
-            </button>
-          </div>
+<%= t 'views.static_pages.home.Make your style new!' %>
+Free, you can get advices from cool friends all over world.
 
-          <div class="inner">
-            <p>Want to become a stylist? <a href="#">3 steps</a>
-              <br> more info here<a href="#"> Docs</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<%= link_to "Sign Up for free", signup_path %>
+
+<p>Want to become a stylist? <a href="#">3 steps</a>
+<br> more info here<a href="#"> Docs</a></p>
+
+
 <% end %>
