--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,33 +1,29 @@
-<div class="container-fluid">
-  <% provide(:title, "Edit user") %>
-  <h1>Update your profile</h1>
+＞＞users/editページはじまり。
+<% provide(:title, "Edit user") %>
+<h1>Update your profile</h1>
 
-  <div class="gravatar_edit">
-    <%= gravatar_for @user %>
-    <a href="http://gravatar.com/emails">change</a>
-  </div>
-  
-  <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-      <%= form_for(@user, html: { multipart: true }) do |f| %>
-      <%= render 'shared/error_messages', object: f.object %>
-
-      <%= f.label :name %>
-      <%= f.text_field :name, class: 'form-control' %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control' %>
-
-
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
-      <% end %>
-    </div>
-  </div>
-
+<div class="gravatar_edit">
+  <%= gravatar_for @user %>
+  <a href="http://gravatar.com/emails">change</a>
 </div>
+
+
+<%= form_for(@user, html: { multipart: true }) do |f| %>
+<%= render 'shared/error_messages', object: f.object %>
+
+<%= f.label :name %>
+<%= f.text_field :name, class: 'form-control' %>
+
+<%= f.label :email %>
+<%= f.email_field :email, class: 'form-control' %>
+
+<%= f.label :password %>
+<%= f.password_field :password, class: 'form-control' %>
+
+<%= f.label :password_confirmation, "Confirmation" %>
+<%= f.password_field :password_confirmation, class: 'form-control' %>
+
+
+<%= f.submit "Save changes", class: "btn btn-primary" %>
+<% end %>
+＜＜users/editページおわり。
