--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,9 @@
 
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-
+Free, you can get advices from cool friends all over world.
+<p>Want to become a stylist? <a href="#">3 steps</a>
+<br> more info here<a href="#"> Docs</a></p>
 
 <%= form_for(@user) do |f| %>
 <%= render 'shared/error_messages', object: f.object %>
