見えにくいので、とりあえずヘッダーとフッターを囲んでおいた。

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,6 +1,7 @@
-
+<div class="ui segment">
 English
 日本語
     <%= link_to "About",   about_path %>
     <%= link_to "Contact", contact_path %>
     <a href="http://news.railstutorial.org/">News</a>
+</div>
