--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <!-- turbolinks読み込み -->
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-<!-- ？ -->
+<!-- IE 9のときのためのもの-->
     <%= csrf_meta_tags %>
     <%= render 'shared/shim' %>
 <!-- jQueryの読み込み -->
