--- a/app/views/users/_follow.html.erb
+++ b/app/views/users/_follow.html.erb
@@ -1,4 +1,10 @@
+＞＞ここから、フォローするボタン。views/users/_follow.html.erbページはじまり
+
 <%= form_for(current_user.active_relationships.build, remote: true) do |f| %>
   <div><%= hidden_field_tag :followed_id, @user.id %></div>
   <%= f.submit "Follow", class: "btn btn-primary" %>
 <% end %>
+
+<!-- 上記のボタンを押したら、relationships_controllerのcreateアクションへ。 -->
+<!-- リモート：trueと書き足すことで、Ajaxを適応しており、ボタンを押してもページを移動することなく非同期でリクエストを送信できる。 -->
+<!-- ここのコードでは、JavaScriptが使用されている。（Rails3からHTMLプロパティを使用しJSを使用できる。） -->
