見た目、パーシャル、ページ遷移がわかりにくいので、セグメント入れてわかりやすくした。

--- a/app/views/shared/_feed.html.erb
+++ b/app/views/shared/_feed.html.erb
@@ -1,3 +1,4 @@
+<div class="ui segment">
 feedページスタート＞＞
 <% if @feed_items.any? %>
   <ol class="posts">
@@ -6,3 +7,4 @@ feedページスタート＞＞
 
 <% end %>
 ＜＜feedページおわり
+</div>
