--- a/app/views/shared/_post_form.html.erb
+++ b/app/views/shared/_post_form.html.erb
@@ -1,3 +1,4 @@
+<div class="ui segment">
 Post_formページスタート＞＞
 <%= form_for(@post, html: { multipart: true }) do |f| %>
 
@@ -188,7 +189,7 @@ Post_formページスタート＞＞
 
 <% end %>
 ＜＜Post_formページおわり。
-
+</div>
 
 <script type="text/javascript">
   $('#post_picture').bind('change', function() {
