--- a/app/views/shared/_scomment_form.html.erb
+++ b/app/views/shared/_scomment_form.html.erb
@@ -1,3 +1,4 @@
+<div class="ui segment">
 ＞＞shared/_scommentページはじまり。
 
   <%= form_for( [@post, @post.scomments.create] ) do |f| %>
@@ -21,7 +22,7 @@
   <% end %>
 
   ＜＜shared/_scommentページおわり。
-
+</div>
 
 <script type="text/javascript">
   $('#scomment_picture').bind('change', function() {
