--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,3 +1,4 @@
+<div class="ui segment">
 Statページスタート＞＞
 <% @user ||= current_user %>
 <div class="stats">
@@ -27,3 +28,4 @@ Statページスタート＞＞
   </a>
 </div>
 ＜＜Statページおわり
+</div>
