--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,3 +1,4 @@
+<div class="ui segment">
 User_infoページスタート＞＞
 <%= current_user.name %>
 <%= link_to gravatar_for(current_user, size: 100), current_user %>
@@ -8,3 +9,4 @@ User_infoページスタート＞＞
 <p>Now <%= @current_user.scomments.count %> stars got!</p>
 <% end %>
 ＜＜User_infoページおわり
+</div>
