--- a/app/views/shared/_favorites.html.erb
+++ b/app/views/shared/_favorites.html.erb
@@ -1,3 +1,5 @@
+<div class="ui segment">
+＞＞shared/_favoriteページスタート
 <p>My Favorite Comments</p>
 <table>
   <tbody>
@@ -10,3 +12,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
