--- a/app/views/shared/_scomment_form.html.erb
+++ b/app/views/shared/_scomment_form.html.erb
@@ -1,27 +1,14 @@
 <div class="ui segment">
-＞＞shared/_scommentページはじまり。
+＞＞shared/_scomment_formページはじまり。
 
   <%= form_for( [@post, @post.scomments.create] ) do |f| %>
-    <div class="field">
-      <%= f.label :content %><br />
       <%= f.text_area :content %>
       <%= f.hidden_field :user_id %>
-    </div>
-    <div class="actions">
-      <button class="button1"><%= f.submit %></button>
-    </div>
-
-    <div class="form-group">
-      <label for="exampleInputFile">File input</label>
-      <span class="picture">
-        <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
-      </span>
-      <small id="fileHelp" class="form-text text-muted">This is some placeholder block-level help text for the above input.</small>
-    </div>
-
+      <%= f.file_field :picture, accept: 'image/jpeg,image/gif,image/png' %>
+      <%= f.submit "SEND", class: "ui positive basic button" %>
   <% end %>
 
-  ＜＜shared/_scommentページおわり。
+  ＜＜shared/_scomment_formページおわり。
 </div>
 
 <script type="text/javascript">
