--- a/app/views/scomments/_scomment.html.erb
+++ b/app/views/scomments/_scomment.html.erb
@@ -1,30 +1,19 @@
-＞＞scomments/_scommentページはじまり。
+＞＞scomments/_scommentフィードページはじまり。
 
 <div id="scomment-<%= scomment.id %>">
-
-  <span class="content">
-  　<%= scomment.content %>
-    <%= image_tag scomment.picture.url if scomment.picture? %>
-  </span>
-
-  <span class="timestamp">
-    <%= time_ago_in_words(scomment.created_at) %> ago.
-  </span>
-
-  <p>From.
-    <span class="user"><%= link_to scomment.user.name, scomment.user %></span>
-  </p>
-
+  <%= scomment.content %>
+  <%= image_tag scomment.picture.url if scomment.picture? %>
+  <%= time_ago_in_words(scomment.created_at) %> ago.
+  <p>From.<%= link_to scomment.user.name, scomment.user %></p>
 </div>
-    <%= link_to 'Delete', [scomment.post, scomment], method: :delete, data: { confirm: 'Really delete?' } %>
+
+<%= link_to 'Delete', [scomment.post, scomment], method: :delete, data: { confirm: 'Really delete?' } %>
 
 <!-- お気に入り -->
-  <button type="button" class="btn btn-default">
-      <%= link_to "Favorites", add_scomment_path(scomment), method: :post, data: { confirm: 'Added to favorites!' } %>
-  </button>
+<div class="ui red button">
+  <i class="heart icon"></i><%= link_to "Add Favorites", add_scomment_path(scomment), method: :post, data: { confirm: 'Added to favorites!' } %>
+</div>
 
-  <button type="button" class="btn btn-default">
-      <%= link_to "UnFavorite",favorite_path, method: :delete, data: { confirm: 'Really delete?' } %>
-  </button>
+<%= link_to "UnFavorite",favorite_path, method: :delete, data: { confirm: 'Really delete?' } %>
 
-＜＜scomments/_scommentページおわり。
+＜＜scomments/_scommentフィードページおわり。
