ratingsカウント表示。

--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -26,6 +26,12 @@ Statページスタート＞＞
     </strong>
     favorites
   </a>
+  <a href="<%= followers_user_path(@user) %>">
+    <strong class="stat">
+      <%= @user.ratings.count %>
+    </strong>
+    stars
+  </a>
 </div>
 ＜＜Statページおわり
 </div>
